--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  xmlns:tools="http://schemas.android.com/tools"
-		  package="ru.dpav.weather">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="ru.dpav.weather">
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -22,11 +22,9 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<meta-data
-			android:name="com.google.android.gms.version"
-			android:value="@integer/google_play_services_version" />
-		<meta-data
-			android:name="com.google.android.maps.v2.API_KEY"
+		<meta-data android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version"/>
+		<meta-data android:name="com.google.android.maps.v2.API_KEY"
 			android:value="@string/google_maps_api_key"/>
 	</application>
 </manifest>
