--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,26 @@
 		android:theme="@style/AppTheme"
 		tools:ignore="GoogleAppIndexingWarning">
 		<activity
-			android:name=".MainActivity"
 			android:label="@string/app_name"
+			android:name=".MainActivity"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-		<activity android:name=".AddCityActivity"
-			android:label="@string/editor_of_city"/>
-		<meta-data android:name="com.google.android.gms.version"
+		<activity
+			android:label="@string/editor_of_city"
+			android:name=".AddCityActivity"/>
+		<activity
+			android:excludeFromRecents="true"
+			android:name=".ChooseIconActivity"
+			android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+		<meta-data
+			android:name="com.google.android.gms.version"
 			android:value="@integer/google_play_services_version"/>
-		<meta-data android:name="com.google.android.maps.v2.API_KEY"
+		<meta-data
+			android:name="com.google.android.maps.v2.API_KEY"
 			android:value="@string/google_maps_api_key"/>
 	</application>
 </manifest>
