--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 androidGradlePlugin = "8.7.2"
-kotlinGradlePlugin = "1.9.23"
+kotlinGradlePlugin = "2.0.21"
 
-androidxAppcompat = "1.6.1"
-androidxConstraintLayout = '2.1.4'
-androidxFragmentKtx = "1.7.0"
+androidxAppcompat = "1.7.0"
+androidxConstraintLayout = "2.2.0"
+androidxFragmentKtx = "1.8.5"
 material = "1.12.0"
 osmMap = "6.1.18"
-gmsPlay = "21.2.0"
+gmsPlay = "21.3.0"
 androidxRecyclerview = "1.3.2"
 retrofit = "2.11.0"
 
