--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
 
 plugins {
     alias libs.plugins.android.application apply false
+    alias libs.plugins.hilt.android apply false
     alias libs.plugins.kotlin.android apply false
+    alias libs.plugins.kotlin.ksp apply false
 }
 
 allprojects {
