--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 androidGradlePlugin = "8.7.2"
 kotlinGradlePlugin = "2.0.21"
+kotlinKsp = "2.0.21-1.0.28"
 
 androidxAppcompat = "1.7.0"
 androidxConstraintLayout = "2.2.0"
@@ -10,6 +11,7 @@ osmMap = "6.1.18"
 gmsPlay = "21.3.0"
 androidxRecyclerview = "1.3.2"
 retrofit = "2.11.0"
+dagger = "2.52"
 
 [libraries]
 android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "androidGradlePlugin" }
@@ -19,6 +21,8 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidxConstraintLayout" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "androidxFragmentKtx" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "androidxRecyclerview" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 osm-map = { module = "org.osmdroid:osmdroid-android", version.ref = "osmMap" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "gmsPlay" }
@@ -27,4 +31,6 @@ retrofit-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinGradlePlugin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKsp" }
