--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,4 +33,5 @@ retrofit-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = 
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinGradlePlugin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinGradlePlugin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKsp" }
