--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,3 +35,9 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinGradlePlugin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlinGradlePlugin" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlinKsp" }
+
+# Convention plugins definded in the project
+dpav-android-application = { id = "dpav.android.application" }
+dpav-android-library = { id = "dpav.android.library" }
+dpav-hilt-ksp = { id = "dpav.hilt.ksp" }
+dpav-hilt-lib = { id = "dpav.hilt.lib" }
