--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ android.useAndroidX=true
 android.defaults.buildfeatures.buildconfig=false
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
+org.gradle.configuration-cache=true
